--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Bandera España</title>
 </head>
-<body>
 
-    <div class="contenedor">
+<body>
         <h1>ESPAÑA</h1>
-        <div class="bandera"></div>
+        <div class="bandera">
+            <div class="rojo1"></div>
+            <div class="amarillo"></div>
+            <div class="rojo2"></div>
+        </div>
     </div>
-    
+
+
 </body>
+
 </html>
